modified and create messages module

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -78,6 +78,7 @@
 
     <div id="content" style="display: none;">
         <%- include('partials/nav') %>
+        <%- include('partials/message') %>
 
         <section id="home" class="hero-gradient min-h-screen flex items-center justify-center pt-16">
             <div class="container mx-auto px-4 py-32 text-center">
