--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -23,7 +23,7 @@
                         <a href="/logout" class="block px-4 py-2 text-red-400 hover:bg-gray-700">Logout</a>
                     </div>
                 <% } else { %>
-                    <a href="/auth/discord" class="bg-blue-600 hover:bg-blue-700 px-6 py-2 rounded-lg text-white font-medium transition-colors">
+                    <a href="/login" class="bg-blue-600 hover:bg-blue-700 px-6 py-2 rounded-lg text-white font-medium transition-colors">
                         Login with Discord
                     </a>
                 <% } %>
