new files and modified files

--- a/views/shot.ejs
+++ b/views/shot.ejs
@@ -13,7 +13,10 @@
         <%- include('partials/shot/sidebar') %>
 
         <!-- Content Area -->
-        <%- include('partials/shot/dashboard') %>
+        <div class="flex-1 p-6">
+            <%- include('partials/shot/dashboard') %>
+            
+        </div>
     </div>
 
     <!-- Footer -->
