modified shot system

--- a/views/partials/shot/sidebar.ejs
+++ b/views/partials/shot/sidebar.ejs
@@ -15,7 +15,7 @@
                     <line x1="6" y1="6" x2="6.01" y2="6"></line>
                     <line x1="6" y1="18" x2="6.01" y2="18"></line>
                 </svg>
-                <span>Dashboard</span>
+                <span>Datacenter</span>
             </a>
         </div>
         <div class="flex items-center text-sm py-1 px-2 hover:bg-dark-200 rounded cursor-pointer">
