announcements files and pages

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,6 +3,7 @@
 <head>
     <%- include('partials/head') %>
 </head>
+<%- include('partials/message') %>
 <body class="bg-gray-900 text-white min-h-screen font-sans">
     <%- include('partials/nav') %>
     
