--- a/views/rules.ejs
+++ b/views/rules.ejs
@@ -82,6 +82,7 @@
         }
     </style>
 </head>
+<%- include('partials/message') %>
 <body class="bg-gray-900 text-white min-h-screen">
     <!-- Rules Section -->
     <section class="py-20 bg-gray-800">
