--- a/views/guides.ejs
+++ b/views/guides.ejs
@@ -107,6 +107,7 @@
         }
     </style>
 </head>
+<%- include('partials/message') %>
 <body class="bg-gray-900 text-white min-h-screen font-sans">
     <%- include('partials/nav') %>
 
