--- a/views/staff.ejs
+++ b/views/staff.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <%- include('partials/head') %>
     <style>
         .staff-card {
@@ -14,6 +15,7 @@
         }
     </style>
 </head>
+<%- include('partials/message') %>
 <body class="bg-gray-900 text-white min-h-screen font-sans">
     <%- include('partials/nav') %>
     
