--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -8,17 +8,17 @@
           <div>
               <h3 class="text-xl font-bold mb-4">Quick Links</h3>
               <ul class="space-y-2">
-                  <li><a href="https://www.mods.tokyomc.fun/rules" class="text-gray-400 hover:text-white transition-colors">Rules</a></li>
-                  <li><a href="https://www.tokyomc.fun/store" class="text-gray-400 hover:text-white transition-colors">Store</a></li>
-                  <li><a href="https://www.mods.tokyomc.fun/vote" class="text-gray-400 hover:text-white transition-colors">Vote</a></li>
+                  <li><a href="/rules" class="text-gray-400 hover:text-white transition-colors">Rules</a></li>
+                  <li><a href="/shot" class="text-gray-400 hover:text-white transition-colors">Admin</a></li>
+                  <li><a href="/" class="text-gray-400 hover:text-white transition-colors">Vote</a></li>
               </ul>
           </div>
           <div>
               <h3 class="text-xl font-bold mb-4">Connect</h3>
               <ul class="space-y-2">
-                  <li><a href="https://discord.gg/" class="text-gray-400 hover:text-white transition-colors">Discord</a></li>
-                  <li><a href="https://www.youtube.com/@" class="text-gray-400 hover:text-white transition-colors">Youtube</a></li>
-                  <li><a href="#" class="text-gray-400 hover:text-white transition-colors">Instagram</a></li>
+                  <li><a href="https://discord.gg/EY48TztpNu" class="text-gray-400 hover:text-white transition-colors">Discord</a></li>
+                  <li><a href="https://youtube.com/@vazhamc5372?si=YlAzDaf9n0CE0brj" class="text-gray-400 hover:text-white transition-colors">Youtube</a></li>
+                  <li><a href="https://www.instagram.com/vazhamc?igsh=d3hiaWYyZGVwdWlp" class="text-gray-400 hover:text-white transition-colors">Instagram</a></li>
               </ul>
           </div>
       </div>
