--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -7,8 +7,8 @@
                 <div class="hidden md:flex space-x-6">
                     <a href="/" class="nav-link py-2">Home</a>
                     <a href="/staff" class="nav-link py-2">Staffs</a>
-                    <a href="/guides" class="nav-link py-2">Guides</a>
-                    <a href="https://discord.gg/zZtMR4PWwE" class="nav-link py-2">Discord</a>
+                    <a href="/rules" class="nav-link py-2">rules</a>
+                    <a href="/announcements" class="nav-link py-2">Announcements</a>
                 </div>
             </div>
             
