--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -42,8 +42,8 @@
         <!-- Mobile Navigation Links -->
             <div id="mobile-menu" class="md:hidden hidden mt-4 space-y-2">
             <a href="/" class="block nav-link py-2">Home</a>
-            <a href="/staff" class="block nav-link py-2">Mod Packs</a>
-            <a href="/rules" class="block nav-link py-2">Guides</a>
+            <a href="/staff" class="block nav-link py-2">Staffs</a>
+            <a href="/rules" class="block nav-link py-2">rules</a>
             <a href="announcements" class="block nav-link py-2">Announcements</a>
         </div>
     </div>
